--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,7 @@
   "version": 2,
   "projects": {
     "gitignore": "apps/gitignore",
-    "gitignore-e2e": "apps/gitignore-e2e"
+    "lib-a": "libs/lib-a",
+    "lib-b": "libs/lib-b"
   }
 }
